# opencal

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  DEVELOPER_README.md  Makefile  Makefile.inc  Makefile.mac  OpenCALSolution.sln  README  README.md  commands.txt  configure.cmake  dependencies.ps
OpenCAL/: CMakeLists.txt  Makefile  OpenCAL.vcxproj  OpenCAL.vcxproj.filters
OpenCAL++/: CMakeLists.txt  Makefile  cmake_install.cmake
OpenCAL++-IP/Gauss/: CMakeLists.txt  script.sh
OpenCAL++-IP/Gauss/input/: README.TXT
OpenCAL++-IP/Gauss/source/: BacteriaGenerator.h  Bacterium.h  Bacterium.h.orig  ContrastStretchingFilter.h  InvertColorsFilter.h  LabelConnectedComponentFilter.h  MyMat.h  Particle.h  ParticleTracking.h  Polygon.h  SegmentFrame.cpp  SegmentFrame.cpp.old  SegmentFrame.cpp.orig  StandardContrastStretchingFilter.h  ThresholdFilter.h  image_processing.h  main.cpp  main.cpp.old  main.cpp.orig
OpenCAL++/examples/: CMakeLists.txt
OpenCAL++/examples/cal_blur/: CMakeLists.txt
OpenCAL++/examples/cal_life/: CMakeLists.txt  indiciVicinato.txt  life_000.txt  life_LAST.txt
OpenCAL++/examples/cal_life3D-glut/: CMakeLists.txt
OpenCAL++/examples/cal_mod2CA3D/: CMakeLists.txt  mod2_0000.txt  mod2_LAST.txt
OpenCAL++/examples/cal_sciddicaT/: CMakeLists.txt  analisiGProf.txt
OpenCAL++/examples/cal_sciddicaT-activecells/: CMakeLists.txt  analisiNuova.txt  analisiTempi.txt  callgrind.out.22232  callgrindOutput.txt  valgridOutput.txt
OpenCAL++/examples/cal_sciddicaT-unsafe/: CMakeLists.txt  analisi.txt  outputvalgrind.txt
OpenCAL++/include/: CalModelFunctor.h  ElementaryProcessFunctor2D.h  ElementaryProcessFunctor3D.h  cal2D.h  cal2D.i  cal2DBufferIO.i  cal2DIO.h  cal2DIO.i  cal2DReduction.h  cal2DReduction.i  cal2DRun.h  cal2DRun.i  cal2DUnsafe.i  cal3D.h  cal3DBuffer.h  cal3DReduction.h  cal3DRun.h  cal3DUnsafe.h  calCommon.h  calCommon.i
OpenCAL++/include/OpenCAL++/: .calManagerIO.h.swp  CALVonNeumannNeighborhood.h  CalModelFunctor.h  ElementaryProcessFunctor3D.h  cal2D.h  cal2DBuffer.h  cal2DBufferIO.h  cal2DIO.h  cal3D.h  (+39 more)
OpenCAL++/source/: ElementaryProcessFunctor2D.cpp  ElementaryProcessFunctor3D.cpp  cal2D.cpp  cal2DBuffer.cpp  cal2DBufferIO.cpp  cal2DIO.cpp  cal2DReduction.cpp  cal2DRun.cpp  cal2DUnsafe.cpp  cal3D.cpp  cal3DBuffer.cpp  cal3DBufferIO.cpp  cal3DIO.cpp  cal3DReduction.cpp  cal3DRun.cpp  cal3DUnsafe.cpp  calActiveCells.cpp  calAlternativeHexagonalNeighborhood.cpp  calElementaryProcessFunctor.cpp  calHexagonalNeighborhood.cpp  calIndexesPool.cpp  calModel.cpp  calMooreNeighborhood.cpp  calNeighborPool.cpp  calRealConverterIO.cpp  calRun.cpp  calSubstate.cpp  calUnsafe.cpp  calVonNeumannNeighborhood.cpp
OpenCAL-CL/: CMakeLists.txt  Doxyfile.in  Makefile  Makefile.inc  OpenCAL-CL.vcxproj  OpenCAL-CL.vcxproj.filters
OpenCAL-CL/OpenCL-Utils/: CMakeLists.txt  Makefile  OpenCL-Utils.vcxproj  OpenCL-Utils.vcxproj.filters
OpenCAL-CL/examples/: CMakeLists.txt
OpenCAL-CL/include/: calcl2D.h  calcl3D.h
OpenCAL-CL/source/: C_vector.c  OpenCL_Utility.c  calcl2D.c  calcl2DReduction.c  calcl2DReduction.h  calcl3D.c  calcl3DReduction.c  calclMultiDevice2D.cpp  calclMultiDevice3D.cpp  calclMultiGPU2D.c  calclMultiGPU2D.cpp  calclMultiGPU3D.cpp  calgl2DRunCL.c  calgl2DUpdaterCL.c  calgl3DRunCL.c  calgl3DUpdaterCL.c  clUtility.c  vector.c
OpenCAL-CPU/: CMakeLists.txt  Doxyfile.in
OpenCAL-CPU/source/: calActiveCells.c  calActiveCellsCLL.c  calActiveCellsNaive.c  calBuffer.c  calBufferIO.c  calCommon.c  calContiguousLinkedList.c  calIO.c  calModel.c  calNeighborPool.c  calRun.c  calRunParallel.c  calRunSerial.c  calUnsafe.c  opencal-explicit.c  opencal.c
OpenCAL-GL/: CMakeLists.txt  Doxyfile.in  Makefile  OpenCAL-GL.vcxproj  OpenCAL-GL.vcxproj.filters  configure.ac
OpenCAL-GL/examples/: CMakeLists.txt
OpenCAL-GL/include/: calgl2D.h  calgl2DNodeData.h  calgl2DUpdater.h  calgl2DWindow.h  calgl3D.h  calgl3DNodeData.h  calgl3DUpdater.h  calgl3DWindow.h  calglCommon.h  calglGlobalSettings.h  calglInfoBar.h  calglLightParameter.h  calglModelViewParameter.h  calglUtils.h
OpenCAL-GL/source/: Makefile.am  calgl2D.c  calgl2DNodeData.c  calgl2DRun.c  calgl2DUpdater.c  calgl2DWindow.c  calgl3D.c  calgl3DNodeData.c  calgl3DRun.c  calgl3DUpdater.c  calgl3DWindow.c  calglGlobalSettings.c  calglInfoBar.c  calglLightParameter.c  calglModelViewParameter.c  calglUtils.c
OpenCAL-OMP/: CMakeLists.txt  Doxyfile.in  Makefile.am  OpenCAL-OMP.vcxproj  OpenCAL-OMP.vcxproj.filters  OpenCAL.vcxproj  configure.ac
OpenCAL-OMP/examples/: CMakeLists.txt
OpenCAL-OMP/include/: cal2D.h  cal2DBuffer.h  cal2DBufferIO.h  cal2DIO.h  cal2DRun.h  cal2DUnsafe.h  cal3D.h  cal3DBuffer.h  cal3DBufferIO.h  cal3DIO.h  cal3DReduction.h  cal3DRun.h  cal3DUnsafe.h  calCommon.h  calOmpDef.h
OpenCAL-OMP/source/: Makefile.am  cal2D.c  cal2DActiveCellsNaive.c  cal2DBuffer.c  cal2DBufferIO.c  cal2DContiguousLinkedList.c  cal2DIO.c  cal2DReduction.c  cal2DRun.c  cal2DUnsafe.c  cal3D.c  cal3DActiveCellsNaive.c  cal3DBuffer.c  cal3DBufferIO.c  cal3DContiguousLinkedList.c  cal3DIO.c  cal3DReduction.c  cal3DRun.c  cal3DUnsafe.c
OpenCAL/documentation/: Doxyfile
OpenCAL/examples/: CMakeLists.txt
OpenCAL/include/: cal2D.h  cal2DBuffer.h  cal2DBufferIO.h  cal2DIO.h  cal2DRun.h  cal2DUnsafe.h  cal3D.h  cal3DBuffer.h  cal3DBufferIO.h  cal3DIO.h  cal3DRun.h  cal3DUnsafe.h  calCommon.h
OpenCAL/source/: cal2D.c  cal2DActiveCellsNaive.c  cal2DBuffer.c  cal2DBufferIO.c  cal2DContiguousLinkedList.c  cal2DIO.c  cal2DReduction.c  cal2DRun.c  cal2DUnsafe.c  cal3D.c  cal3DActiveCellsNaive.c  cal3DBuffer.c  cal3DBufferIO.c  cal3DContiguousLinkedList.c  cal3DIO.c  cal3DReduction.c  cal3DRun.c  cal3DUnsafe.c
mpi_tests/life/: CMakeLists.txt  lifeCluster.cpp
mpibenchmarks/heat3D_MPI-OMP/: CMakeLists.txt  calcluster.cfg  heat3D.cpp
mpibenchmarks/mod2CA3D/: CMakeLists.txt  calcluster.cfg  mod2CA3DMPI.cpp
mpibenchmarks/mod2CA3D_MPI-OMP/: CMakeLists.txt  mod2CA3DMPI.cpp
tests/getOpenCLPlatformAndDevice/: CMakeLists.txt
tests/sciddicaS3hex/: CMakeLists.txt
tests/sciddicaT/: CMakeLists.txt
(+3722 files in other folders)
